--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <main class="main">
       <!--Hero section-->
       <section class="section hero">
-        <div class="container">
+        <div class="hero-container container">
           <h1 class="hero-title">
             Effective Solutions <br />for Your Business
           </h1>
@@ -183,6 +183,54 @@
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a class="clients-link" href="" aria-label="Logo 1">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="" aria-label="Logo 2">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="" aria-label="Logo 3">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="" aria-label="Logo 4">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-logo-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="" aria-label="Logo 5">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a class="clients-link" href="" aria-label="Logo 6">
+                <svg class="clients-icon" width="104" height="56">
+                  <use href="./images/sprite.svg#icon-logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
