--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,9 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -76,13 +78,16 @@
           </ul>
           <ul class="app-list list">
             <li class="app-item">
-              <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-1.jpg"
-                  alt="Banking app"
-                  width="360"
-                />
+              <a class="app-link link" href="">
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-1.jpg"
+                    alt="Banking app"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Banking App Interface Concept</h2>
                   <p class="app-text">App</p>
@@ -91,12 +96,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-2.jpg"
-                  alt="Way of payment"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-2.jpg"
+                    alt="Way of payment"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Cashless Payment</h2>
                   <p class="app-text">Marketing</p>
@@ -105,12 +114,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-3.jpg"
-                  alt="Maditation app"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-3.jpg"
+                    alt="Maditation app"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Meditation App</h2>
                   <p class="app-text">App</p>
@@ -119,12 +132,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-4.jpg"
-                  alt="Taxi service"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-4.jpg"
+                    alt="Taxi service"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Taxi Service</h2>
                   <p class="app-text">Marketing</p>
@@ -133,12 +150,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-5.jpg"
-                  alt="Pictures on the screen"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-5.jpg"
+                    alt="Pictures on the screen"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Screen Illustrations</h2>
                   <p class="app-text">Design</p>
@@ -147,12 +168,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-6.jpg"
-                  alt="The girl is looking for online curses"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-6.jpg"
+                    alt="The girl is looking for online curses"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Online Courses</h2>
                   <p class="app-text">Marketing</p>
@@ -161,12 +186,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-7.jpg"
-                  alt="Different types of instsgram stories"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-7.jpg"
+                    alt="Different types of instsgram stories"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Instagram Stories Concept</h2>
                   <p class="app-text">Design</p>
@@ -175,12 +204,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-8.jpg"
-                  alt="Organic food in the bag"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-8.jpg"
+                    alt="Organic food in the bag"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Organic Food</h2>
                   <p class="app-text">Web Site</p>
@@ -189,12 +222,16 @@
             </li>
             <li class="app-item">
               <a class="app-link link" href=""
-                ><img
-                  class="app-img"
-                  src="./images/portfolio/img-9.jpg"
-                  alt="Coffee with milk"
-                  width="360"
-                />
+                >
+                <div class="wrapper">
+                  <img
+                    class="app-img"
+                    src="./images/portfolio/img-9.jpg"
+                    alt="Coffee with milk"
+                    width="360"
+                  />
+                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app-content">
                   <h2 class="app-title">Fresh Coffee</h2>
                   <p class="app-text">Web Site</p>
@@ -217,5 +254,6 @@
         </p>
       </div>
     </footer>
+    </div>
   </body>
 </html>
