--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link" href="./index.html">Studio</a>
+              <a class="header-link link active" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -60,7 +60,9 @@
           <h1 class="hero-title">
             Effective Solutions <br />for Your Business
           </h1>
-          <button class="hero-btn" type="button">Order Service</button>
+          <button class="hero-btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!--Benefits section-->
@@ -69,6 +71,9 @@
           <h2 hidden class="visually-hidden">Features</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
+              <svg class="benefits-icon" width="64" height="64">
+                <use href="./images/sprite.svg#icon-antenna"></use>
+              </svg>
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +81,9 @@
               </p>
             </li>
             <li class="benefits-item">
+              <svg class="benefits-icon" width="64" height="64">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +91,9 @@
               </p>
             </li>
             <li class="benefits-item">
+              <svg class="benefits-icon" width="64" height="64">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -90,6 +101,9 @@
               </p>
             </li>
             <li class="benefits-item">
+              <svg class="benefits-icon" width="64" height="64">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -146,6 +160,36 @@
               <div class="card-name">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="networks-list list">
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -158,6 +202,36 @@
               <div class="card-name">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="networks-list list">
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -170,6 +244,36 @@
               <div class="card-name">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="networks-list list">
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -182,13 +286,45 @@
               <div class="card-name">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="networks-list list">
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="networks-item">
+                    <a href="" class="networks-link">
+                      <svg class="networks-icon" width="16" height="16">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+      <!--Clients section-->
       <section class="section">
-        <div class="container">
+        <div class="clients-container container">
+          <h2 class="clients-title">Customers</h2>
           <ul class="clients-list list">
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 1">
@@ -238,15 +374,61 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo link" href="./index.html"
-          >Web<span class="footer-logo-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-container container">
+        <div class="container">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-span">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container">
+          <h3 class="social-title">Social media</h3>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a href="" class="footer-link">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    <!--Modal section-->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-btn" type="button" data-modal-close>
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
