--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
           <h2 hidden class="visually-hidden">Features</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/sprite.svg#icon-antenna"></use>
-              </svg>
+              <div class="block">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -81,9 +83,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/sprite.svg#icon-clock"></use>
-              </svg>
+              <div class="block">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -91,9 +95,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/sprite.svg#icon-diagram"></use>
-              </svg>
+              <div class="block">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -101,9 +107,11 @@
               </p>
             </li>
             <li class="benefits-item">
-              <svg class="benefits-icon" width="64" height="64">
-                <use href="./images/sprite.svg#icon-astronaut"></use>
-              </svg>
+              <div class="block">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-title">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -164,28 +172,28 @@
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -206,28 +214,28 @@
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -248,28 +256,28 @@
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -290,28 +298,28 @@
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="networks-item">
                     <a href="" class="networks-link">
                       <svg class="networks-icon" width="16" height="16">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -322,49 +330,49 @@
         </div>
       </section>
       <!--Clients section-->
-      <section class="section">
+      <section class="clients-section">
         <div class="clients-container container">
           <h2 class="clients-title">Customers</h2>
           <ul class="clients-list list">
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 1">
                 <svg class="clients-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo-1"></use>
+                  <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 2">
                 <svg class="clients-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo-2"></use>
+                  <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 3">
                 <svg class="clients-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo-3"></use>
+                  <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 4">
                 <svg class="clients-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo-4"></use>
+                  <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 5">
                 <svg class="clients-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo-5"></use>
+                  <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href="" aria-label="Logo 6">
                 <svg class="clients-icon" width="104" height="56">
-                  <use href="./images/sprite.svg#icon-logo-6"></use>
+                  <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -385,33 +393,33 @@
           </p>
         </div>
         <div class="container">
-          <h3 class="social-title">Social media</h3>
+          <p class="social-text">Social media</p>
           <ul class="footer-list list">
             <li class="footer-item">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a href="" class="footer-link">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -424,7 +432,7 @@
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="8" height="8">
-            <use href="./images/sprite.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
