--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,11 @@
                     alt="Banking app"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Banking App Interface Concept</h2>
@@ -95,8 +99,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -104,7 +107,11 @@
                     alt="Way of payment"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Cashless Payment</h2>
@@ -113,8 +120,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -122,7 +128,11 @@
                     alt="Maditation app"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Meditation App</h2>
@@ -131,8 +141,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -140,7 +149,11 @@
                     alt="Taxi service"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Taxi Service</h2>
@@ -149,8 +162,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -158,7 +170,11 @@
                     alt="Pictures on the screen"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Screen Illustrations</h2>
@@ -167,8 +183,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -176,7 +191,11 @@
                     alt="The girl is looking for online curses"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Online Courses</h2>
@@ -185,8 +204,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -194,7 +212,11 @@
                     alt="Different types of instsgram stories"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Instagram Stories Concept</h2>
@@ -203,8 +225,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -212,7 +233,11 @@
                     alt="Organic food in the bag"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Organic Food</h2>
@@ -221,8 +246,7 @@
               </a>
             </li>
             <li class="app-item">
-              <a class="app-link link" href=""
-                >
+              <a class="app-link link" href="">
                 <div class="wrapper">
                   <img
                     class="app-img"
@@ -230,7 +254,11 @@
                     alt="Coffee with milk"
                     width="360"
                   />
-                  <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-content">
                   <h2 class="app-title">Fresh Coffee</h2>
@@ -254,6 +282,5 @@
         </p>
       </div>
     </footer>
-    </div>
   </body>
 </html>
