--- a/portfolio.html
+++ b/portfolio.html
@@ -282,5 +282,15 @@
         </p>
       </div>
     </footer>
+    <div class="block">
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
   </body>
 </html>
