--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     <!--Footer section-->
     <footer class="footer">
       <div class="footer-container container">
-        <div class="container">
+        <div class="logo-container">
           <a class="footer-logo link" href="./index.html"
             >Web<span class="footer-logo-span">Studio</span>
           </a>
